--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   font-family: "Quicksand";
   color: #333;
 }
+
 .navbar {
   padding: 20px;
   display: flex;
@@ -14,24 +15,36 @@
   margin: 0 auto;
   border-bottom: 1px solid #f2f2f2;
 }
+
 .navbar h1 {
   color: #f1356d;
 }
+
 .navbar .links {
   margin-left: auto;
 }
+
 .navbar a {
   margin-left: 16px;
   text-decoration: none;
   padding: 6px;
 }
+
 .navbar a:hover {
   color: #f1356d;
 }
+
+.App {
+  padding-bottom: 1px;
+  background-color: aliceblue;
+}
+
 .content {
   max-width: 600px;
   margin: 40px auto;
   padding: 20px;
+  background-color: rgb(238, 238, 238);
+
 }
 
 /* blog previews / list */
@@ -40,14 +53,17 @@
   margin: 20px 0;
   border-bottom: 1px solid #fafafa;
 }
+
 .blog-preview:hover {
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
 }
+
 .blog-preview h2 {
   font-size: 20px;
   color: #f1356d;
   margin-bottom: 8px;
 }
+
 .blog-preview a {
   text-decoration: none;
 }
@@ -58,9 +74,11 @@
   color: #f1356d;
   margin-bottom: 10px;
 }
+
 .blog-details div {
   margin: 20px 0;
 }
+
 .blog-details button {
   background: #f1356d;
   color: #fff;
@@ -76,15 +94,18 @@
   margin: 0 auto;
   text-align: center;
 }
+
 .create label {
   text-align: left;
   display: block;
 }
+
 .create h2 {
   font-size: 20px;
   color: #f1356d;
   margin-bottom: 30px;
 }
+
 .create input,
 .create textarea,
 .create select {
@@ -95,6 +116,7 @@
   box-sizing: border-box;
   display: block;
 }
+
 .create button {
   background: #f1356d;
   color: #fff;
